# task-manager

./: .codeclimate.yml  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
labels/: forms.py  models.py  tests.py  views.py
labels/fixtures/: labels.json  task_labels_relations.json
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
statuses/: admin.py  forms.py  models.py  tests.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/: mixins.py  settings.py  template.env  urls.py
task_manager/templates/: index.html
tasks/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_task_labels.py  0004_rename_performer_task_executor.py  0005_alter_task_author_alter_task_executor_and_more.py  0006_alter_task_labels_alter_task_status.py  0007_tasklabelsrelations_alter_task_labels_and_more.py  0008_alter_tasklabelsrelations_table.py  0009_alter_tasklabelsrelations_table.py  0010_alter_tasklabelsrelations_task.py  0011_alter_tasklabelsrelations_task.py  0012_alter_tasklabelsrelations_task.py  0013_alter_tasklabelsrelations_task.py  0014_alter_task_labels_alter_task_status.py  0015_alter_task_description_alter_task_executor_and_more.py
templates/: base.html  home.html
templates/labels/: create.html  delete.html  (+2 more)
users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+43 files in other folders)
